# VITS-TTS

./: .env  .gitignore  main.py  pyproject.toml
configs/: config.json
models/vits/: attentions.py  discriminators.py  generator.py  losses.py  models.py  modules.py  posterior_encoder.py  text_encoder.py
scripts/: __init__.py
scripts/preprocess/: __init__.py  audio_to_mel.py  generate_manifest.py  make_toy_data.py  text_pipeline.py
scripts/setup/: check_gpu.py  download_ljspeech_sample.py
scripts/training/: dataset.py  train.py
tests/: test_full_architecture.py  test_full_vits_step.py  test_generator.py  test_init.py  test_loader.py  test_monotonic_align.py  test_posterior_encoder.py  test_text_encoder.py
utils/: data_utils.py  text_utils.py
