[project]
name = "vits-tts"
version = "0.1.0"
description = "Low-latency VITS TTS project"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "torch==2.4.1",
    "torchvision==0.19.1",
    "torchaudio==2.4.1",
    "librosa>=0.10.0",
    "scipy",
    "numpy",
    "matplotlib",
    "phonemizer",
    "tqdm",
    "tensorboard",
    "cython",
    "pandas>=2.3.3",
]

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu118" }
torchvision = { index = "pytorch-cu118" }
torchaudio = { index = "pytorch-cu118" }
